crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@459.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_agg(nmr) from (values ('{}'::nummultirange), ('{}'::nummultirange)) t(nmr);"
---
SelectStmt@0..88
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..16 "range_agg"
      Ascii40@16..17 "("
      ColumnRef@17..20
        Ident@17..20 "nmr"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  RangeSubselect@28..86
    SelectStmt@28..78
      Values@28..34 "values"
      Whitespace@34..35 " "
      Ascii40@35..36 "("
      List@36..55
        TypeCast@36..55
          AConst@36..40
            Sconst@36..40 "'{}'"
          Typecast@40..42 "::"
          TypeName@42..55
            Ident@42..55 "nummultirange"
      Ascii41@55..56 ")"
      Ascii44@56..57 ","
      Whitespace@57..58 " "
      Ascii40@58..59 "("
      List@59..78
        TypeCast@59..78
          AConst@59..63
            Sconst@59..63 "'{}'"
          Typecast@63..65 "::"
          TypeName@65..78
            Ident@65..78 "nummultirange"
    Ascii41@78..79 ")"
    Ascii41@79..80 ")"
    Whitespace@80..81 " "
    Alias@81..86
      Ident@81..82 "t"
      Ascii40@82..83 "("
      Ident@83..86 "nmr"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

