crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@460.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_agg(nmr) from (values ('{[1,2]}'::nummultirange)) t(nmr);"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..16 "range_agg"
      Ascii40@16..17 "("
      ColumnRef@17..20
        Ident@17..20 "nmr"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  RangeSubselect@28..68
    SelectStmt@28..60
      Values@28..34 "values"
      Whitespace@34..35 " "
      Ascii40@35..36 "("
      List@36..60
        TypeCast@36..60
          AConst@36..45
            Sconst@36..45 "'{[1,2]}'"
          Typecast@45..47 "::"
          TypeName@47..60
            Ident@47..60 "nummultirange"
    Ascii41@60..61 ")"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    Alias@63..68
      Ident@63..64 "t"
      Ascii40@64..65 "("
      Ident@65..68 "nmr"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

