crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@461.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_agg(nmr) from (values ('{[1,2], [5,6]}'::nummultirange)) t(nmr);"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..16 "range_agg"
      Ascii40@16..17 "("
      ColumnRef@17..20
        Ident@17..20 "nmr"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  RangeSubselect@28..75
    SelectStmt@28..67
      Values@28..34 "values"
      Whitespace@34..35 " "
      Ascii40@35..36 "("
      List@36..67
        TypeCast@36..67
          AConst@36..52
            Sconst@36..52 "'{[1,2], [5,6]}'"
          Typecast@52..54 "::"
          TypeName@54..67
            Ident@54..67 "nummultirange"
    Ascii41@67..68 ")"
    Ascii41@68..69 ")"
    Whitespace@69..70 " "
    Alias@70..75
      Ident@70..71 "t"
      Ascii40@71..72 "("
      Ident@72..75 "nmr"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

