crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@463.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_agg(nmr) from (values ('{[1,2]}'::nummultirange), ('{[5,6]}'::nummultirange)) t(nmr);"
---
SelectStmt@0..98
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..16 "range_agg"
      Ascii40@16..17 "("
      ColumnRef@17..20
        Ident@17..20 "nmr"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  RangeSubselect@28..96
    SelectStmt@28..88
      Values@28..34 "values"
      Whitespace@34..35 " "
      Ascii40@35..36 "("
      List@36..60
        TypeCast@36..60
          AConst@36..45
            Sconst@36..45 "'{[1,2]}'"
          Typecast@45..47 "::"
          TypeName@47..60
            Ident@47..60 "nummultirange"
      Ascii41@60..61 ")"
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      Ascii40@63..64 "("
      List@64..88
        TypeCast@64..88
          AConst@64..73
            Sconst@64..73 "'{[5,6]}'"
          Typecast@73..75 "::"
          TypeName@75..88
            Ident@75..88 "nummultirange"
    Ascii41@88..89 ")"
    Ascii41@89..90 ")"
    Whitespace@90..91 " "
    Alias@91..96
      Ident@91..92 "t"
      Ascii40@92..93 "("
      Ident@93..96 "nmr"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

