crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@466.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select range_intersect_agg(nmr) from nummultirange_test where false;
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..26 "range_intersect_agg"
      Ascii40@26..27 "("
      ColumnRef@27..30
        Ident@27..30 "nmr"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  From@32..36 "from"
  Whitespace@36..37 " "
  RangeVar@37..55
    Ident@37..55 "nummultirange_test"
  Whitespace@55..56 " "
  Where@56..61 "where"
  Whitespace@61..62 " "
  AConst@62..67
    FalseP@62..67 "false"
  Ascii59@67..68 ";"

