crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@467.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_intersect_agg(null::nummultirange) from nummultirange_test;"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..26 "range_intersect_agg"
      Ascii40@26..27 "("
      TypeCast@27..46
        AConst@27..31
          NullP@27..31 "null"
        Typecast@31..33 "::"
        TypeName@33..46
          Ident@33..46 "nummultirange"
  Ascii41@46..47 ")"
  Whitespace@47..48 " "
  From@48..52 "from"
  Whitespace@52..53 " "
  RangeVar@53..71
    Ident@53..71 "nummultirange_test"
  Ascii59@71..72 ";"

